refactor(系统设置): 优化项目返回的参数